--- a/week- 06/mega backend project/.gitignore
+++ b/week- 06/mega backend project/.gitignore
@@ -1,2 +1,44 @@
-node_modules
+# Node modules
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# dotenv environment variables
 .env
+.env.*
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# VS Code settings
+.vscode/
+
+# Build output
+dist/
+build/
+
+# Coverage directory
+coverage/
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# IDE files
+.idea/
+*.sublime-workspace
+*.sublime-project
