--- a/week- 08/leetcode clone/backend/.gitignore
+++ b/week- 08/leetcode clone/backend/.gitignore
@@ -3,3 +3,56 @@ node_modules
 .env
 
 /src/generated/prisma
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build output
+dist/
+build/
+out/
+coverage/
+.next/
+.nuxt/
+.svelte-kit/
+.cache/
+.astro/
+
+# Environment files
+.env
+.env.*.local
+
+# IDEs and editors
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Misc
+*.local
+*.swp
+*.swo
+*.bak
+*.tmp
+
+# Prisma
+/prisma/migrations/
+prisma/dev.db
+
+# Test output
+test-results/
+coverage/
